# Jetson-PRS

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  README_CAMERAS.md
config/: camera_legacy.json  default_config.json
config/default_config/: default_config.json
include/: config_manager.h  database_manager.h  detector.h  lpr_system.h  ocr_processor.h  plate_validator.h  video_capture.h
scripts/: check_network.sh  convert_model_to_onnx.py  find_rtsp_url.sh  fix_opencv_dependencies.sh  install_dependencies.sh  run_lpr.sh  setup_complete.sh  setup_network.sh  test_rtsp.sh
src/: config_manager.cpp  database_manager.cpp  detector.cpp  lpr_system.cpp  main.cpp  ocr_processor.cpp  plate_validator.cpp  video_capture.cpp
